# kato_program

./: CMakeLists.txt  README.md  package.xml
config/: camera.yaml  params.yaml
include/velodyne/: point_types.h  pointcloudXYZIR.h
launch/: camera_enet_play.launch  camera_lidar_fusion.launch  camera_lidar_fusion2.launch  camera_lidar_fusion_manual.launch  camera_read.launch  camera_read_compress.launch  camera_read_enet.launch  control_and_matching.launch  enet_lidar_fusion.launch  enet_lidar_fusion2.launch  enet_lidar_fusion2_with_odometry.launch  enet_lidar_fusion2_with_odometry_filtered.launch  enet_lidar_fusion_manual.launch  global_labeled_pointcloud.launch  kato_program.launch  kato_program_rosbag.launch  mathing.launch  not_used_camera_read.launch
launch/include/: module_rviz.launch
launch/include/config/: rviz.rviz
map/preliminary_map/: preliminary_map.pcd
map/preliminary_trajectory/: smoothed_trajectory.pcd
model/: bn_conv_merged_model_5label2.prototxt  bn_conv_merged_model_kato1.prototxt  bn_conv_merged_weights_5label2.caffemodel  bn_conv_merged_weights_kato1.caffemodel
src/: camera.py  camera_enet_play.cpp  camera_read.cpp  camera_read_compress.cpp  camera_read_enet.cpp  classifier_enet.cpp  sub_compressed_image.cpp
src/control/: control.cpp  matching.cpp
src/fusion/: camera_info.hpp  camera_lidar_fusion.cpp  camera_lidar_fusion2.cpp  camera_lidar_fusion_manual.cpp  classifier_enet.h  enet_lidar_fusion.cpp  enet_lidar_fusion2.cpp  enet_lidar_fusion2_with_odometry.cpp  enet_lidar_fusion2_with_odometry_filtered.cpp  enet_lidar_fusion_manual.cpp  global_labeled_pointcloud.cpp
